# playground

./: .gitignore  .gitmodules  README.md  new.cpp  pyy.py  s.cpp
.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  workspace  workspace.json
ADS/: fenwick_tree.cpp  segment_tree.py
Algorithms/: cipher.py  expression_tree.cpp  graph.py  graphs_1.cpp  sorting.rs  string_op.py
Applications/: expression_tree.md
CSES/: dynamic_programming.py  introductory.py  sorting_and_searching.py
Cipher/: rot13.py
Compression/: huffman_compression.cpp  jpeg_read.cpp  lzw.cpp
DS/: array.py  array_nd.rs  disjoint_set.py  heap.py  linked_list.py  stack.py  trees.py  trie.py
Maths/: .gitignore  (+14 more)
Maths/Fourier/: CMakeLists.txt
Maths/Fourier/src/: complex.hpp  main.cpp
linalg/: .gitignore  Cargo.toml  README.md  a.txt  simd_matmul.cpp
linalg/documents/: mat_multiply.md
linalg/src/: main.rs  matmul.rs  matmul_2.rs
linalg/src/common/: array_test.rs  chunk_rem_slice_iter.rs  diagonal_iter.rs  mod.rs  rev_chunk_rem_slice_iter.rs  shrink_iter_test.rs  shrink_iterator.rs  split.rs  tests.rs  vector.rs  vector_test.rs
linalg/src/common/vector/src/: chunks_pre_post.rs  chunks_pre_post_test.rs  lib.rs  shrink_iter_test.rs  shrink_iterator.rs  vector.rs  vector_test.rs
linalg/src/inv/: inv_iter.rs  inv_iter_simd.rs  inv_normal.rs  mod.rs
linalg/src/matmul/: cf_blocked_simd.rs  cf_process_blocks.rs  matmul_ikj.rs  matmul_normal.rs  matmul_transposed.rs  matmul_transposed_multi_accumulated.rs  mod.rs
linalg/src/matmul_modulo/: matmul_modulo.rs  mod.rs
(+132 files in other folders)
