[package]
name = "linalg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3
# target-cpu = 'native'

[dependencies]
rand = "0.8.5"
vector = { git = "https://github.com/toastedbreadandomelette/vector-rs", branch = "master" }
